# nhp-immunogenomics

./: .gitattributes  .gitignore  README.md  pyproject.toml  version.json
.github/ISSUE_TEMPLATE/: provisional-submission.yml
.github/workflows/: add-provisional.yml  deploy-pages.yml  process-provisional-changes.yml  provisional-from-issue.yml  release.yml  test.yml  validate-provisional.yml  weekly-update.yml
.staging/: config.json  input.fasta
NHPImmunoApp/: Package.swift
NHPImmunoApp/NHPImmunoApp.xcodeproj/: project.pbxproj
NHPImmunoApp/Sources/: ContentView.swift  NHPImmunoApp.swift
NHPImmunoApp/Sources/Models/: Allele.swift  AlleleIndex.swift  ProvisionalAllele.swift  PullRequestInfo.swift  Species.swift
NHPImmunoApp/Sources/Services/: AlleleService.swift  GitHubAPI.swift  KeychainService.swift  ProvisionalService.swift
NHPImmunoApp/Tests/: FASTAParserTests.swift  TSVParserTests.swift
data/MHC/Aole/: F.gb  (+3 more)
docs/: alleles.json  app.js  index.html  style.css
pipeline/: __init__.py  api_client.py  cli.py  config.py  fetch.py  genbank_builder.py  metadata_index.py  namer.py  provisional.py  release_tracker.py
provisional/: manifest.tsv
provisional/retired/: retired.tsv
scripts/: submit-provisional.sh
tests/: conftest.py  test_api_client.py  test_fetch.py  test_genbank_builder.py  test_metadata_index.py  test_namer.py  test_provisional.py  test_release_tracker.py  test_roundtrip.py
tests/fixtures/: allele_mhc_coding_only.json  allele_mhc_full_class1.json  allele_mhc_genomic.json  allele_nhkir.json  listing_page.json  listing_with_fields.json
(+635 files in other folders)
